<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/patientName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:hint="@string/patient_Name" />

        <EditText
            android:id="@+id/patientAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/patient_age" />

        <TextView
            android:id="@+id/genders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/gender" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/gender" />

        <TextView
            android:id="@+id/doctors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/doctor" />

        <Spinner
            android:id="@+id/doctor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/doctor" />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>