<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w1"
    tools:context=".activityMain2">

    <TextView
        android:id="@+id/LoginView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="sans-serif-black"
        android:text="Login"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="135dp"
        android:ems="10"
        android:hint="@string/loginemail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginView2" />

    <EditText
        android:id="@+id/signpwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/signupbtnsp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signpwd" />

    <Button
        android:id="@+id/signupbtnsp"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/delete"
        android:onClick="signup"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />



</androidx.constraintlayout.widget.ConstraintLayout>